syntax = "proto3";
package abag.quasarnode.intergamm;

import "gogoproto/gogo.proto";
import "osmosis/gamm/pool-models/balancer/balancerPool.proto";
import "osmosis/gamm/v1beta1/pool.proto";

option go_package = "github.com/abag/quasarnode/x/gamm/pool-models/balancer";

service Msg {
  rpc CreateBalancerPool(MsgCreateBalancerPool)
      returns (MsgCreateBalancerPoolResponse);
}

// ===================== MsgCreatePool
message MsgCreateBalancerPool {
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];

  abag.quasarnode.osmosis.gamm.poolmodels.BalancerPoolParams poolParams = 2
      [ (gogoproto.moretags) = "yaml:\"pool_params\"" ];

  repeated abag.quasarnode.osmosis.gamm.PoolAsset poolAssets = 3
      [ (gogoproto.nullable) = false ];

  string future_pool_governor = 4
      [ (gogoproto.moretags) = "yaml:\"future_pool_governor\"" ];
}

message MsgCreateBalancerPoolResponse {}
